// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update tui-axes adds one to [horizontalLines] and [verticalLines] attributes: test.html 1`] = `
{
  "0. Before": "
                <tui-axes [horizontalLines]="1" [verticalLines]="2" />
            ",
  "1. After": "
                <tui-axes [horizontalLines]="2" [verticalLines]="3" />
            ",
}
`;

exports[`ng-update tui-axes removes [axisX] and [axisY] attributes and adds one to [horizontalLines] and [verticalLines] attributes for complex template: test.html 1`] = `
{
  "0. Before": "
                <tui-axes
                    class="axes"
                    [axisX]="axisX"
                    [axisXLabels]="axisXLabels"
                    [axisY]="axisY"
                    [axisYInset]="axisYInset"
                    [axisYLabels]="axisYLabels"
                    [axisYName]="axisYName"
                    [axisYSecondaryInset]="axisYSecondaryInset"
                    [axisYSecondaryLabels]="axisYSecondaryLabels"
                    [axisYSecondaryName]="axisYSecondaryName"
                    [horizontalLines]="horizontalLines"
                    [horizontalLinesHandler]="horizontalLinesHandler"
                    [verticalLines]="labels.length - 1"
                    [verticalLinesHandler]="verticalLinesHandler"
                />
            ",
  "1. After": "
                <tui-axes
                    class="axes"
                    
                    [axisXLabels]="axisXLabels"
                    
                    [axisYInset]="axisYInset"
                    [axisYLabels]="axisYLabels"
                    [axisYName]="axisYName"
                    [axisYSecondaryInset]="axisYSecondaryInset"
                    [axisYSecondaryLabels]="axisYSecondaryLabels"
                    [axisYSecondaryName]="axisYSecondaryName"
                    [horizontalLines]="(horizontalLines) + 1"
                    [horizontalLinesHandler]="horizontalLinesHandler"
                    [verticalLines]="(labels.length - 1) + 1"
                    [verticalLinesHandler]="verticalLinesHandler"
                />
            ",
}
`;

exports[`ng-update tui-axes removes axisX and axisY attributes: test.html 1`] = `
{
  "0. Before": "
                <tui-axes axisX="solid" axisY="dashed" />
            ",
  "1. After": "
                <tui-axes   />
            ",
}
`;
